// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows adding a non-null list of non-null type 1`] = `
"\\"\\"\\"The root query type which gives access points into the data universe.\\"\\"\\"
type Query {
  \\"\\"\\"
  Exposes the root query type nested one level down. This is helpful for Relay 1
  which can only query top level fields if they are in a particular form.
  \\"\\"\\"
  query: Query!

  \\"\\"\\"
  Gives a list of numbers that were randomly generated by fair dice roll
  \\"\\"\\"
  randomNumbers: [Int!]!
}
"
`;

exports[`allows adding a non-null type 1`] = `
"\\"\\"\\"The root query type which gives access points into the data universe.\\"\\"\\"
type Query {
  \\"\\"\\"
  Exposes the root query type nested one level down. This is helpful for Relay 1
  which can only query top level fields if they are in a particular form.
  \\"\\"\\"
  query: Query!
  randomNumber: Int!
}
"
`;

exports[`allows adding a simple type 1`] = `
"\\"\\"\\"The root query type which gives access points into the data universe.\\"\\"\\"
type Query {
  \\"\\"\\"
  Exposes the root query type nested one level down. This is helpful for Relay 1
  which can only query top level fields if they are in a particular form.
  \\"\\"\\"
  query: Query!

  \\"\\"\\"comment\\"\\"\\"
  randomNumber: Int
}
"
`;
